src/objects/ContractAppDEVICE__c.object
<CustomObject>
    <description>This is the behind-the-scenes reporting object that links up all Devices to Applications to Contracts.  We can utilize this object in reports and dashboards to identify applications with missing contracts, etc...  Also at a glance, we can see per device, all the apps associated with it, and the pertinent contracts.  This object is a flat file, uploaded back into SFDC from MS Access, via Informatica Sync.  Original raw data is initially taken from SFDC itself.  This object is not used in SFDC direct entry, nor should it be listed in Tabs.  For reporting purposes ONLY.</description>
    <fields>
        <fullName>APC__c</fullName>
        <description>From NPI, mapped to &quot;APC&quot; field</description>
        <inlineHelpText>From NPI, mapped to &quot;APC&quot; field</inlineHelpText>
        <label>APC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName_Full__c</fullName>
        <label>AccountName_Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ContractAppDEVICES</relationshipLabel>
        <relationshipName>ContractAppDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <label>AccountOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlphaDate__c</fullName>
        <label>AlphaDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Android_Release__c</fullName>
        <label>Android_Release</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Android__c</fullName>
        <label>Android</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppName_Full__c</fullName>
        <label>AppName_Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AppName</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>ContractAppDevices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Category__c</fullName>
        <label>App_Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_sub_type__c</fullName>
        <label>App_sub_type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BetaDate__c</fullName>
        <label>BetaDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <label>Cancelled</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <label>ContractName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber_Full__c</fullName>
        <label>ContractNumber_Full</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractNumber</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>ContractAppDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractOwner__c</fullName>
        <label>ContractOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPhase__c</fullName>
        <label>ContractPhase</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <label>ContractStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateAppAddedToDevice__c</fullName>
        <label>DateAppAddedToDevice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceName_Full__c</fullName>
        <label>DeviceName_Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceName</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>ContractAppDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Fully_Approved__c</fullName>
        <label>Device_Fully_Approved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <label>Device ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalName__c</fullName>
        <label>ExternalName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governing__c</fullName>
        <label>Governing</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_on_sd_card__c</fullName>
        <label>Include_on_sd_card</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalName__c</fullName>
        <label>InternalName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LRB_Date__c</fullName>
        <label>LRB_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LRB_PipelineID__c</fullName>
        <label>LRB_PipelineID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <description>Last Refresh of Data from IOD</description>
        <label>Last_Refresh</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motorola_Entity__c</fullName>
        <label>Motorola_Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Family_ID__c</fullName>
        <label>NPI Family ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRE_Cost__c</fullName>
        <label>NRE_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_country_of_incorp__c</fullName>
        <label>Partner_country_of_incorp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentAppsApproved__c</fullName>
        <label>PercentAppsApproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Versions__c</fullName>
        <label>Platform_Versions</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevShareApp__c</fullName>
        <label>RevShareApp</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevShareDetails__c</fullName>
        <label>RevShareDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoyaltyCurrent__c</fullName>
        <label>RoyaltyCurrent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoyaltyDescr__c</fullName>
        <label>RoyaltyDescr</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoyaltyHigh__c</fullName>
        <label>RoyaltyHigh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoyaltyLow__c</fullName>
        <label>RoyaltyLow</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoyaltyPaymentAttribute__c</fullName>
        <label>RoyaltyPaymentAttribute</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royalty_Contract__c</fullName>
        <label>Royalty Contract?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Date__c</fullName>
        <label>SA_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFID_Application__c</fullName>
        <description>SF internal ID for App</description>
        <label>SFID_Application</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID_Contract__c</fullName>
        <description>SF internal ID for Contract</description>
        <label>SFID_Contract</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID_Device__c</fullName>
        <description>SF internal ID for Device</description>
        <label>SFID_Device</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_and_Completed__c</fullName>
        <label>Shipped and Completed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Apps_Lead__c</fullName>
        <label>Software_Apps_Lead</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_Concat__c</fullName>
        <label>Unique Concatenation</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>include_in_bom__c</fullName>
        <label>include_in_bom</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>ContractAppDEVICE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeviceName__c</field>
            <operation>contains</operation>
            <value>china,prc</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ContractAppDevice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractAppDEVICES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>